# src/handlers/mod.rs
@@ -1,3 +1,4 @@
+pub mod collaborator;
 pub mod item;
 pub mod space;
 pub mod history;
