# src/models/mod.rs
@@ -1,3 +1,4 @@
+pub mod collaborator;
 pub mod error;
 pub mod item;
 pub mod space;
